--- a/notebooks/exploration/make_datasets.ipynb
+++ b/notebooks/exploration/make_datasets.ipynb
@@ -6,8 +6,8 @@
    "id": "9630f49e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T16:57:11.464432Z",
-     "start_time": "2023-02-06T16:57:11.349363Z"
+     "end_time": "2023-03-14T14:51:28.950761Z",
+     "start_time": "2023-03-14T14:51:28.758278Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "id": "aff1249c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T16:57:13.805881Z",
-     "start_time": "2023-02-06T16:57:11.915776Z"
+     "end_time": "2023-03-14T14:51:49.993222Z",
+     "start_time": "2023-03-14T14:51:29.409324Z"
     }
    },
    "outputs": [
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1105183/399597061.py:7: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "/tmp/ipykernel_2738410/399597061.py:7: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
       "\n",
       "import os\n",
       "os.environ['USE_PYGEOS'] = '0'\n",
@@ -66,12 +66,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "475958ff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T16:59:01.943606Z",
-     "start_time": "2023-02-06T16:59:01.901062Z"
+     "end_time": "2023-03-14T14:51:50.140767Z",
+     "start_time": "2023-03-14T14:51:49.999058Z"
     }
    },
    "outputs": [],
@@ -94,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "0cd79409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-01T15:11:05.774521Z",
-     "start_time": "2023-02-01T15:11:05.409443Z"
+     "end_time": "2023-03-14T14:53:08.298442Z",
+     "start_time": "2023-03-14T14:52:59.361427Z"
     }
    },
    "outputs": [],
@@ -115,7 +115,7 @@
     "        zip_root = path.relative_to(fr).parents[0]\n",
     "\n",
     "        # Get path to interim/zip_root\n",
-    "        zip_to_path = join(fi, temp)\n",
+    "        zip_to_path = join(fi, zip_root)\n",
     "\n",
     "        # Make directory, including parents\n",
     "        # No need to check if directory exists bc\n",
