adapt code to incorporate directory of hazard models

--- a/notebooks/exploration/make_datasets.ipynb
+++ b/notebooks/exploration/make_datasets.ipynb
@@ -94,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "0cd79409",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-03-14T14:53:08.298442Z",
-     "start_time": "2023-03-14T14:52:59.361427Z"
+     "end_time": "2023-03-14T15:22:37.944755Z",
+     "start_time": "2023-03-14T15:19:48.074417Z"
     }
    },
    "outputs": [],
@@ -276,12 +276,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "0361b4ad",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-14T15:27:04.866194Z",
+     "start_time": "2023-03-14T15:27:04.825214Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "haz_filedir = join(fi, 'hazard')\n",
+    "haz_dirs = glob.glob(join(haz_filedir, \"output*\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1285b394",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-14T15:27:05.387672Z",
+     "start_time": "2023-03-14T15:27:05.345384Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.025',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.0175',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.1',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.01',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.06',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.0275',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.08',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.02',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.035',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.045',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.05',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.0375',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.0125',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.07',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.0225',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.04',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.03',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.09',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.0325',\n",
+       " '/jumbo/keller-lab/projects/icom/precal/precal_hazard/data/interim/hazard/output0.015']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "haz_dirs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "056810c1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-05T15:24:30.529650Z",
-     "start_time": "2023-02-05T15:24:29.790273Z"
+     "end_time": "2023-03-14T15:38:57.320939Z",
+     "start_time": "2023-03-14T15:38:46.601696Z"
     }
    },
    "outputs": [],
@@ -294,53 +355,75 @@
     "# cellsize      9.2592593e-05\n",
     "# NODATA_value  -9999\n",
     "\n",
-    "# xll and yll mean x lower left and y lower left\n",
+    "# Prepare directory for writing out\n",
+    "HAZ_OUT_DIR = join(fp, 'hazard', 'depths')\n",
+    "Path(HAZ_OUT_DIR).mkdir(parents=True, exist_ok=True)\n",
     "\n",
-    "# Use numpy to load text, then reshape the data\n",
-    "# Use rasterio to provide the CRS\n",
-    "# The datum is NAD83, EPSG: 4269\n",
-    "haz_filep = join(fr, 'hazard', 'peak_flood_depth.txt')\n",
-    "fld_depths_in = np.loadtxt(haz_filep, skiprows=6)\n",
+    "# Constant for peak_flood depth.txt\n",
+    "DEPTH_FILEP = \"peak_flood_depth.txt\"\n",
     "\n",
     "# Constants from metadata\n",
-    "epsg = 4269\n",
-    "nodata = -9999\n",
-    "nrows = 1564\n",
-    "res = 9.2592593e-05\n",
-    "xll = -75.4159722219145\n",
-    "yll = 40.0026388902255\n",
+    "EPSG = 4269\n",
+    "NODATA = -9999\n",
+    "NROWS = 1564\n",
+    "RES = 9.2592593e-05\n",
+    "XLL = -75.4159722219145\n",
+    "YLL = 40.0026388902255\n",
     "# Get the CRS \n",
-    "crs = CRS.from_user_input(epsg)\n",
+    "crs = CRS.from_user_input(EPSG)\n",
     "\n",
     "# Calculate the y coordinate for the origin\n",
     "# by adding the cell resolution * raster height (#rows)\n",
     "# to the y lower left coordinate\n",
-    "yul = yll + res*nrows\n",
+    "# xll and yll mean x lower left and y lower left\n",
+    "YUL = YLL + RES*NROWS\n",
     "\n",
     "# Get transform\n",
-    "trans = rasterio.transform.from_origin(xll,\n",
-    "                                       yul,\n",
-    "                                       res, res)\n",
+    "trans = rasterio.transform.from_origin(XLL,\n",
+    "                                       YUL,\n",
+    "                                       RES, RES)\n",
     "\n",
-    "# Prepare directory \n",
-    "haz_out_dir = join(fp, 'hazard')\n",
-    "Path(haz_out_dir).mkdir(parents=True, exist_ok=True)\n",
-    "# Likely will add a temp/ directory here\n",
-    "# The reason to do temp/ with unique filenames is that\n",
-    "# We can run parallel jobs with different input hazard\n",
-    "# And calculate losses this way simultaneously with \n",
-    "# Asychronous i/o (no overlapping file read/write)\n",
-    "haz_out_filep = join(haz_out_dir, 'peak_fld_depth.tif')\n",
     "\n",
-    "# Write raster \n",
-    "haz_r = rasterio.open(haz_out_filep, 'w', driver='GTiff',\n",
-    "                      height=fld_depths_in.shape[0],\n",
-    "                      width=fld_depths_in.shape[1],\n",
-    "                      count=1, dtype=str(fld_depths_in.dtype),\n",
-    "                      crs=crs, nodata=-nodata, transform=trans)\n",
+    "# Use \"output*\" wildcard in glob to find\n",
+    "# all subdirectories in interim/hazard/\n",
+    "# that have peak_flood_depth.txt files in them\n",
+    "# Use numpy to load text, then reshape the data\n",
+    "# Use rasterio to provide the CRS\n",
+    "# The datum is NAD83, EPSG: 4269\n",
+    "haz_filedir = join(fi, 'hazard')\n",
+    "haz_dirs = glob.glob(join(haz_filedir, \"output*\"))\n",
     "\n",
-    "haz_r.write(fld_depths_in, 1)\n",
-    "haz_r.close()"
+    "# Loop through directories in haz_dirs\n",
+    "# Convert each peak_flood_depth.txt\n",
+    "# into a raster\n",
+    "# Use the wildcard component\n",
+    "# after \"output\" as the index\n",
+    "for hd in haz_dirs:\n",
+    "    haz_filep = join(hd, DEPTH_FILEP)\n",
+    "    # Suffix correspondes to parameter\n",
+    "    # values used to generate depths\n",
+    "    # Useful to keep this in the processing/writing\n",
+    "    # of files\n",
+    "    file_suf = hd.split(\"output\")[1]\n",
+    "\n",
+    "    # Load peak_flood_depth.txt\n",
+    "    fld_depths_in = np.loadtxt(haz_filep, skiprows=6)\n",
+    "\n",
+    "    # Unique filename for each depth grid\n",
+    "    # Join haz_out_dir defined as a constant above\n",
+    "    # with peak_fld_depth, the file_suf, and .tif\n",
+    "    filename = 'peak_fld_depth_' + file_suf + '.tif'\n",
+    "    haz_out_filep = join(HAZ_OUT_DIR, filename)\n",
+    "\n",
+    "    # Write raster \n",
+    "    haz_r = rasterio.open(haz_out_filep, 'w', driver='GTiff',\n",
+    "                          height=fld_depths_in.shape[0],\n",
+    "                          width=fld_depths_in.shape[1],\n",
+    "                          count=1, dtype=str(fld_depths_in.dtype),\n",
+    "                          crs=crs, nodata=NODATA, transform=trans)\n",
+    "\n",
+    "    haz_r.write(fld_depths_in, 1)\n",
+    "    haz_r.close()"
    ]
   },
   {
@@ -353,35 +436,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
+   "id": "d3bb4393",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-14T16:24:37.122318Z",
+     "start_time": "2023-03-14T16:24:37.079378Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['peak_fld_depth_0.0375.tif',\n",
+       " 'peak_fld_depth_0.0125.tif',\n",
+       " 'peak_fld_depth_0.035.tif',\n",
+       " 'peak_fld_depth_0.05.tif',\n",
+       " 'peak_fld_depth_0.02.tif',\n",
+       " 'peak_fld_depth_0.0275.tif',\n",
+       " 'peak_fld_depth_0.025.tif',\n",
+       " 'peak_fld_depth_0.0225.tif',\n",
+       " 'peak_fld_depth_0.0175.tif',\n",
+       " 'peak_fld_depth_0.0325.tif',\n",
+       " 'peak_fld_depth_0.03.tif',\n",
+       " 'peak_fld_depth_0.04.tif',\n",
+       " 'peak_fld_depth_0.1.tif',\n",
+       " 'peak_fld_depth_0.07.tif',\n",
+       " 'peak_fld_depth_0.045.tif',\n",
+       " 'peak_fld_depth_0.09.tif',\n",
+       " 'peak_fld_depth_0.08.tif',\n",
+       " 'peak_fld_depth_0.01.tif',\n",
+       " 'peak_fld_depth_0.06.tif',\n",
+       " 'peak_fld_depth_0.015.tif']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "depth_filenames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "b26f65c0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T16:59:44.790971Z",
-     "start_time": "2023-02-06T16:59:36.735340Z"
+     "end_time": "2023-03-14T16:25:44.719812Z",
+     "start_time": "2023-03-14T16:25:09.109307Z"
     }
    },
    "outputs": [],
    "source": [
     "# Read in NSI data\n",
-    "int_exp_filep = join(fi, 'exposure')\n",
-    "nsi_gdf = gpd.read_file(join(int_exp_filep, 'nsi.gpkg'))\n",
+    "INT_EXP_FILEP = join(fi, 'exposure')\n",
+    "nsi_gdf = gpd.read_file(join(INT_EXP_FILEP, 'nsi.gpkg'))\n",
     "\n",
-    "# Open the depth raster in read mode\n",
-    "haz_out_dir = join(fp, 'hazard')\n",
-    "haz_out_filep = join(haz_out_dir, 'peak_fld_depth.tif')\n",
-    "depth_r = rasterio.open(haz_out_filep)\n",
-    "\n",
-    "# Sample points from the raster based on nsi coordinates\n",
     "# Get coordinate list\n",
     "coord_list = [(x, y) for x, y in\n",
-    "              zip(nsi_gdf['geometry'].x, nsi_gdf['geometry'].y)]\n",
+    "              zip(nsi_gdf['geometry'].x,\n",
+    "                  nsi_gdf['geometry'].y)]\n",
     "\n",
-    "# Get sampled values from pixels\n",
-    "nsi_gdf['depth_m'] = [x[0] for x in depth_r.sample(coord_list)]\n",
+    "# List of depth series\n",
+    "depth_list = []\n",
     "\n",
-    "# Convert depth to ft\n",
-    "nsi_gdf['depth_ft'] = nsi_gdf['depth_m']*3.281\n"
+    "# For each depth raster, link up unique property\n",
+    "# coordinates with the corresponding depth values\n",
+    "# Write out file of coord/id index & depth_suf columns\n",
+    "depth_filenames = os.listdir(HAZ_OUT_DIR)\n",
+    "\n",
+    "for d_fn in depth_filenames:\n",
+    "    # Filepath and load\n",
+    "    d_grid_fp = join(HAZ_OUT_DIR, d_fn)\n",
+    "    # Open the depth raster in read mode\n",
+    "    d_grid = rasterio.open(d_grid_fp)\n",
+    "\n",
+    "    # Get the suffix\n",
+    "    # First, get the pre .tif str component\n",
+    "    filepre = d_fn.split('.tif')[0]\n",
+    "    # Then get last element splitting on \"_\"\n",
+    "    d_suf = filepre.split('_')[-1]\n",
+    "\n",
+    "    # Sample points from the raster based on nsi coordinates\n",
+    "    # Get sampled values from pixels\n",
+    "    sampled_depths = [x[0] for x in d_grid.sample(coord_list)]\n",
+    "\n",
+    "    # Store as series with name\n",
+    "    # Index by fd_id\n",
+    "    # depth_d_suf\n",
+    "    depth_series = pd.Series(sampled_depths,\n",
+    "                             index=nsi_gdf['fd_id'],\n",
+    "                             name='depth_' + d_suf)\n",
+    "\n",
+    "    # Convert depth to ft\n",
+    "    depth_series = depth_series * 3.281\n",
+    "\n",
+    "    # Store in list\n",
+    "    depth_list.append(depth_series)\n",
+    "    \n",
+    "# Concat into dataframe\n",
+    "depths = pd.concat(depth_list, axis=1)\n",
+    "\n",
+    "# Write data frame to file\n",
+    "# Exposure/depths links depths to properties\n",
+    "EXP_OUT_DIR = join(fp, 'exposure')\n",
+    "Path(EXP_OUT_DIR).mkdir(parents=True, exist_ok=True)\n",
+    "DEPTHS_OUT_FILEP = join(EXP_OUT_DIR, 'depths.pqt')\n",
+    "# fd_id is index, so set index=True\n",
+    "depths.to_parquet(DEPTHS_OUT_FILEP,\n",
+    "                  index=True)"
    ]
   },
   {
@@ -399,12 +565,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "16d958cc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-06T17:04:19.541217Z",
-     "start_time": "2023-02-06T17:04:08.100399Z"
+     "end_time": "2023-03-14T20:09:24.255096Z",
+     "start_time": "2023-03-14T20:09:13.068019Z"
     }
    },
    "outputs": [],
@@ -417,10 +583,8 @@
     "# relevant for this first case study so avoiding the code\n",
     "\n",
     "# Write out to processed/exposure/\n",
-    "exp_out_dir = join(fp, 'exposure')\n",
-    "Path(exp_out_dir).mkdir(parents=True, exist_ok=True)\n",
-    "exp_out_filep = join(exp_out_dir, 'nsi_res.gpkg')\n",
-    "nsi_res.to_file(exp_out_filep, driver='GPKG')"
+    "EXP_OUT_FILEP = join(EXP_OUT_DIR, 'nsi_res.gpkg')\n",
+    "nsi_res.to_file(EXP_OUT_FILEP, driver='GPKG')"
    ]
   },
   {
