--- a/notebooks/exploration/risk_estimates.ipynb
+++ b/notebooks/exploration/risk_estimates.ipynb
@@ -6,8 +6,8 @@
    "id": "08595ee5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T15:31:35.856218Z",
-     "start_time": "2023-02-07T15:31:35.823949Z"
+     "end_time": "2023-03-14T19:45:18.213660Z",
+     "start_time": "2023-03-14T19:45:17.952081Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "id": "747a5025",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T15:31:58.940565Z",
-     "start_time": "2023-02-07T15:31:57.596145Z"
+     "end_time": "2023-03-14T19:45:23.269780Z",
+     "start_time": "2023-03-14T19:45:18.301985Z"
     }
    },
    "outputs": [
@@ -31,7 +31,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_2077215/863041077.py:6: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
+      "/tmp/ipykernel_3656689/863041077.py:6: UserWarning: Shapely 2.0 is installed, but because PyGEOS is also installed, GeoPandas will still use PyGEOS by default for now. To force to use and test Shapely 2.0, you have to set the environment variable USE_PYGEOS=0. You can do this before starting the Python process, or in your code before importing geopandas:\n",
       "\n",
       "import os\n",
       "os.environ['USE_PYGEOS'] = '0'\n",
@@ -59,8 +59,8 @@
    "id": "b2bc1ee9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T15:32:20.568583Z",
-     "start_time": "2023-02-07T15:32:20.514851Z"
+     "end_time": "2023-03-14T19:45:23.310791Z",
+     "start_time": "2023-03-14T19:45:23.274950Z"
     }
    },
    "outputs": [],
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "id": "4a2f01f7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T16:12:59.322396Z",
-     "start_time": "2023-02-07T16:12:57.175888Z"
+     "end_time": "2023-03-14T20:38:17.592540Z",
+     "start_time": "2023-03-14T20:38:14.783801Z"
     }
    },
    "outputs": [],
@@ -104,15 +104,19 @@
     "# Load structures (linked to hazard)\n",
     "# Probably more reasonable to load hazard as well\n",
     "# Especially as we go on to take in more hazard grids\n",
-    "exp_dir = join(fp, 'exposure')\n",
-    "exp_filep = join(exp_dir, 'nsi_res.gpkg')\n",
-    "nsi_res = gpd.read_file(exp_filep)\n",
+    "EXP_DIR = join(fp, 'exposure')\n",
+    "EXP_FILEP = join(EXP_DIR, 'nsi_res.gpkg')\n",
+    "nsi_res = gpd.read_file(EXP_FILEP)\n",
+    "\n",
+    "# Load depths\n",
+    "DEPTH_FILEP = join(EXP_DIR, 'depths.pqt')\n",
+    "depths = pd.read_parquet(DEPTH_FILEP)\n",
     "\n",
     "# Load damage functions\n",
     "# Filepath to NACCS depth damage functions\n",
-    "vul_dir = join(fp, 'vulnerability')\n",
+    "VUL_DIR = join(fp, 'vulnerability')\n",
     "# Read ddfs\n",
-    "naccs = pd.read_csv(join(vul_dir, 'naccs_ddfs.csv'))"
+    "naccs = pd.read_csv(join(VUL_DIR, 'naccs_ddfs.csv'))"
    ]
   },
   {
@@ -125,12 +129,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 42,
    "id": "e1d0669a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T20:14:00.329656Z",
-     "start_time": "2023-02-07T20:13:59.759673Z"
+     "end_time": "2023-03-14T20:38:17.673709Z",
+     "start_time": "2023-03-14T20:38:17.594360Z"
     }
    },
    "outputs": [],
@@ -193,28 +197,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "84df84d4",
+   "execution_count": 43,
+   "id": "9d032209",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T20:33:12.054898Z",
-     "start_time": "2023-02-07T20:33:11.997383Z"
+     "end_time": "2023-03-14T20:38:21.438510Z",
+     "start_time": "2023-03-14T20:38:21.393020Z"
     }
    },
    "outputs": [],
    "source": [
+    "# Subset for dataframe of columns needed for loss estimates and merging\n",
+    "res_loss_cols = ['fd_id', 'occtype', 'found_ht', 'found_type', 'val_struct']\n",
+    "res_loss_temp = res_f.loc[:,res_loss_cols].set_index('fd_id')\n",
+    "\n",
+    "# Merge res_loss with depths\n",
+    "res_loss = res_loss_temp.merge(depths, on='fd_id', how='inner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "7929d4ba",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-14T20:38:28.132084Z",
+     "start_time": "2023-03-14T20:38:28.012944Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Columns with depths\n",
+    "depth_cols = [x for x in res_loss.columns if 'depth' in x]\n",
+    "\n",
     "# Subtract foundation height from depth relative to grade\n",
-    "res_f['depth_ffe'] = res_f.loc[:,'depth_ft'] - res_f.loc[:,'found_ht']\n",
+    "res_loss.loc[:, depth_cols] = res_loss.loc[:, depth_cols].sub(res_loss['found_ht'], axis=0)\n",
     "\n",
     "# Round depth to nearest 10th of a foot\n",
-    "res_f['depth_ffe'] = res_f.loc[:,'depth_ffe'].round(1)\n",
+    "res_loss.loc[:, depth_cols] = res_loss.loc[:, depth_cols].round(1)\n",
     "\n",
     "# For basement homes, we need to adjust to the depth of the basement\n",
     "# In the NACCS region, basements are assumed to have\n",
     "# -8 ft relative to FFE as where damage can be incurred\n",
     "# So we'll adjust the depth by 8\n",
-    "bhomes = res_f['found_type'] == 'B'\n",
-    "res_f.loc[bhomes, 'depth_ffe'] = res_f.loc[bhomes, 'depth_ffe'] - 8"
+    "bhomes = res_loss['found_type'] == 'B'\n",
+    "res_loss.loc[bhomes, depth_cols] = res_loss.loc[bhomes, depth_cols].sub(8, axis=0)"
    ]
   },
   {
@@ -227,12 +254,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 45,
    "id": "8b914740",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:30:16.795500Z",
-     "start_time": "2023-02-07T21:30:16.700568Z"
+     "end_time": "2023-03-14T20:38:30.373253Z",
+     "start_time": "2023-03-14T20:38:30.248282Z"
     }
    },
    "outputs": [],
@@ -305,35 +332,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "16a47e43",
+   "execution_count": 53,
+   "id": "0694b825",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:30:17.441789Z",
-     "start_time": "2023-02-07T21:30:17.398321Z"
+     "end_time": "2023-03-14T20:43:05.096485Z",
+     "start_time": "2023-03-14T20:43:03.488191Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Subset for dataframe of columns needed for loss estimates and merging\n",
-    "res_loss_cols = ['bid', 'occtype', 'val_struct', 'depth_ffe']\n",
-    "res_loss = res_f.loc[:,res_loss_cols]"
+    "# Melt dataframe so that we can easily apply damage curves\n",
+    "# Retain occtype, val, depths, and reset index\n",
+    "res_loss_f = res_loss.drop(columns=['found_ht', 'found_type']).reset_index()\n",
+    "res_loss_f = res_loss_f.melt(id_vars=['fd_id', 'occtype', 'val_struct'],\n",
+    "                             var_name='param',\n",
+    "                             value_name='depth')\n",
+    "# Update parameterization to just str after depth_\n",
+    "res_loss_f['param'] = res_loss_f['param'].str.split('_').str[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 54,
+   "id": "f030b07e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-14T20:43:05.118144Z",
+     "start_time": "2023-03-14T20:43:05.098776Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fd_id</th>\n",
+       "      <th>occtype</th>\n",
+       "      <th>val_struct</th>\n",
+       "      <th>param</th>\n",
+       "      <th>depth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>570201393</td>\n",
+       "      <td>RES1-1SWB</td>\n",
+       "      <td>438922.821</td>\n",
+       "      <td>0.0375</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>570201400</td>\n",
+       "      <td>RES1-2SWB</td>\n",
+       "      <td>558333.600</td>\n",
+       "      <td>0.0375</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>570201401</td>\n",
+       "      <td>RES1-2SWB</td>\n",
+       "      <td>411230.358</td>\n",
+       "      <td>0.0375</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>570201402</td>\n",
+       "      <td>RES1-2SWB</td>\n",
+       "      <td>340946.179</td>\n",
+       "      <td>0.0375</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>570201403</td>\n",
+       "      <td>RES1-2SWB</td>\n",
+       "      <td>447718.209</td>\n",
+       "      <td>0.0375</td>\n",
+       "      <td>-10.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       fd_id    occtype  val_struct   param  depth\n",
+       "0  570201393  RES1-1SWB  438922.821  0.0375  -10.0\n",
+       "1  570201400  RES1-2SWB  558333.600  0.0375  -10.0\n",
+       "2  570201401  RES1-2SWB  411230.358  0.0375  -10.0\n",
+       "3  570201402  RES1-2SWB  340946.179  0.0375  -10.0\n",
+       "4  570201403  RES1-2SWB  447718.209  0.0375  -10.0"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "res_loss_f.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "id": "c00604e8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-02-07T21:44:03.280049Z",
-     "start_time": "2023-02-07T21:44:02.586393Z"
+     "end_time": "2023-03-14T20:43:14.390003Z",
+     "start_time": "2023-03-14T20:43:06.930446Z"
     }
    },
    "outputs": [],
    "source": [
     "# Merge DDFs into the structure data\n",
-    "res_loss = res_loss.merge(naccs_r_f)\n",
+    "res_loss_f = res_loss_f.merge(naccs_r_f,\n",
+    "                              left_on=['depth', 'occtype'],\n",
+    "                              right_on=['depth_ffe', 'occtype'],\n",
+    "                              how='left')\n",
+    "# Drop depth_ffe\n",
+    "# Fill na with 0\n",
+    "res_loss_f = res_loss_f.drop(columns=['depth_ffe'])\n",
+    "res_loss_f.loc[:,['ML', 'Max', 'Min']] = res_loss_f.loc[:,['ML', 'Max', 'Min']].fillna(0)\n",
+    "\n",
     "\n",
     "# Helper function for drawing triangular distribution from\n",
     "# Min, ML, Max\n",
@@ -348,13 +490,42 @@
     "                                              right=maxdam)\n",
     "\n",
     "# Get reldam from triangular distribution from (Min, ML, Max)\n",
-    "res_loss['reldam'] = res_loss.apply(lambda x: tri_rd(x['Min'],\n",
-    "                                                     x['ML'],\n",
-    "                                                     x['Max']),\n",
-    "                                    axis=1)\n",
+    "res_loss_f['reldam'] = res_loss_f.apply(lambda x: tri_rd(x['Min'],\n",
+    "                                                         x['ML'],\n",
+    "                                                         x['Max']),\n",
+    "                                        axis=1)\n",
     "\n",
     "# Get structure damage\n",
-    "res_loss['structdam'] = res_loss['reldam'] * res_loss['val_struct']"
+    "res_loss_f['structdam'] = res_loss_f['reldam'] * res_loss_f['val_struct']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de15658e",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-03-14T20:43:46.862148Z",
+     "start_time": "2023-03-14T20:43:46.744010Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Group by parameterizations\n",
+    "# Sum over damages to structures\n",
+    "# Look at distribution of overall damages\n",
+    "res_loss_f.groupby(['param'])['structdam'].sum().describe().astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2202539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# As of now, not writing out any of the damages to file\n",
+    "# The damages are calculated in memory"
    ]
   }
  ],
