yml for conda environment and update fips codes for nsi download

--- a/notebooks/exploration/download_datasets.ipynb
+++ b/notebooks/exploration/download_datasets.ipynb
@@ -81,8 +81,8 @@
    "outputs": [],
    "source": [
     "# Call the NSI API by fips\n",
-    "# Chester, Delaware, Montgomery and Philadelphia\n",
-    "fips_list = ['42029', '42045', '42091', '42101']\n",
+    "# Camden, County NJ\n",
+    "fips_list = ['34007']\n",
     "\n",
     "# Get the URL\n",
     "url = \"https://nsi.sec.usace.army.mil/nsiapi/structures\"\n",
